--- a/DK/MyApp.DK/app.json
+++ b/DK/MyApp.DK/app.json
@@ -1,7 +1,7 @@
 ﻿{
-    "id":  "DKGUID",
+    "id":  "25090fe8-c3e0-4829-9328-00a8f86b235f",
     "name":  "MyApp.DK",
-    "publisher":  "PUBLISHERNAME",
+    "publisher":  "ZAPACEIG",
     "version":  "1.0.0.0",
     "brief":  "",
     "description":  "",
