--- a/W1/MyApp.W1/app.json
+++ b/W1/MyApp.W1/app.json
@@ -1,7 +1,7 @@
 ﻿{
-    "id":  "W1GUID",
+    "id":  "eb018964-cdd8-4c44-bb3d-c931d580e5ca",
     "name":  "MyApp.W1",
-    "publisher":  "PUBLISHERNAME",
+    "publisher":  "ZAPACEIG",
     "version":  "1.0.0.0",
     "brief":  "",
     "description":  "",
