--- a/ES/MyApp.ES/app.json
+++ b/ES/MyApp.ES/app.json
@@ -1,7 +1,7 @@
 ﻿{
-    "id":  "ESGUID",
+    "id":  "8b910201-3bd8-4a9c-b1b8-7f4bf065150c",
     "name":  "MyApp.ES",
-    "publisher":  "PUBLISHERNAME",
+    "publisher":  "ZAPACEIG",
     "version":  "1.0.0.0",
     "brief":  "",
     "description":  "",
