--- a/ES/MyApp.ES/app.json
+++ b/ES/MyApp.ES/app.json
@@ -18,9 +18,9 @@
             "version":  "1.0.0.0"
         },
         {
-            "id":  "W1GUID",
+            "id":  "eb018964-cdd8-4c44-bb3d-c931d580e5ca",
             "name":  "MyApp.W1",
-            "publisher":  "PUBLISHERNAME",
+            "publisher":  "ZAPACEIG",
             "version":  "1.0.0.0"
         }
     ],
