--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -5,5 +5,11 @@
   "templateSha": "8edc212cf392aa985d35e99ae22756762607f974",
     "DeliverToGitHubPackages": {
     "branches": [ " NonExistingBranch" ]
-  }
+  },
+  "incrementalBuilds": {
+    "mode": "modifiedApps",
+    "onPush": true,
+    "onPull_Request": true,
+    "retentionDays": 30
+  }  
 }
